# events

./: README.md  pyproject.toml
examples/online_chat/: README.md  pyproject.toml
examples/online_chat/src/app/: __init__.py  app.py  bus.py  dto.py  events.py  message.py  user.py
examples/online_chat/static/: index.html  main.js
examples/user_registration/: README.md  docker-compose.infra.yml  pyproject.toml
examples/user_registration/common/: .gitignore  README.md  pyproject.toml
examples/user_registration/common/src/common/: __init__.py  log.py  utils.py
examples/user_registration/common/src/common/contracts/user/: __init__.py  topic.py  user_registered.py
examples/user_registration/common/src/common/rabbitmq/: __init__.py  bus.py  provider.py  settings.py
examples/user_registration/email_service/: .env.template  pyproject.toml
examples/user_registration/email_service/src/email_service/: __init__.py  __main__.py  builder.py  consumer.py  provider.py  sender.py  settings.py
examples/user_registration/user_service/: .env.template  database.db  pyproject.toml
examples/user_registration/user_service/src/user_service/: __init__.py
examples/user_registration/user_service/src/user_service/application/: provider.py  transaction.py
examples/user_registration/user_service/src/user_service/application/email/: gateway.py
examples/user_registration/user_service/src/user_service/application/user/: __init__.py  register_user.py
examples/user_registration/user_service/src/user_service/domain/: entity.py
examples/user_registration/user_service/src/user_service/domain/user/: entity.py  events.py  repository.py
examples/user_registration/user_service/src/user_service/infrastructure/: provider.py
examples/user_registration/user_service/src/user_service/infrastructure/event_handlers/: __init__.py  provider.py  user_registered.py
examples/user_registration/user_service/src/user_service/infrastructure/outbox/: __main__.py  processor.py
examples/user_registration/user_service/src/user_service/infrastructure/persistence/: outbox.py  provider.py  settings.py  transaction.py
examples/user_registration/user_service/src/user_service/infrastructure/persistence/models/: __init__.py  outbox.py
examples/user_registration/user_service/src/user_service/infrastructure/persistence/models/user/: __init__.py  mapper.py  model.py  repository.py
examples/user_registration/user_service/src/user_service/presentation/http/: __main__.py
examples/user_registration/user_service/src/user_service/presentation/http/features/: health.py  user.py
src/events/: __init__.py
src/events/domain/: __init__.py  aggregate.py  dispatcher.py  entity.py  event.py
src/events/integration/: __init__.py  bus.py  (+1 more)
(+12 files in other folders)
