[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Starikov", email = "acherryjam@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "events",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
events = { path = "../../../", editable = true }
