[project]
name = "email-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alexander Starikov", email = "acherryjam@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["common", "dishka>=1.7.2", "pydantic-settings>=2.12.0"]

[project.scripts]
email-service = "email_service:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
common = { workspace = true }
